<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_title">Streamability</string>
    <string name="login_subtitle">A Stream Searching Platform</string>
    <string name="login_background_pic_content_desc">A logo background image made with curved shapes and grey, white, and blue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="retry">retry</string>
</resources>