<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/random_img_download"
    tools:context=".ui.login_user.LoginFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="#154671"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subTitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="@string/login_subtitle"
        android:textAlignment="center"
        android:textColor="#154671"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/title_tv"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/login_btn"
        style="@style/PrimaryButton"
        android:background="@drawable/rounded_corners"
        android:text="@string/sign_in"
        android:textColor="@color/login_btn_text"
        android:theme="@style/LoginBtnLayout"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/sign_up"
        style="@style/SecondaryButton"
        android:text="@string/sign_up"
        android:textColor="@color/sign_up_text"
        android:theme="@style/LoginBtnLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>