<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign_in_up.AccountFragment">

    <ImageView
        android:id="@+id/iv_bg_logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/random_img_download"
        android:contentDescription="@string/login_background_pic_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:hint="@string/username"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_bg_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="15"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="20"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/login_btn"
        style="@style/PrimaryButton"
        android:text=""
        android:textColor="@color/login_btn_text"
        android:theme="@style/LoginBtnLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/forgotPassword"
        android:textColor="#154671"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_up_btn" />

    <TextView
        android:id="@+id/account_frag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="#154671"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
